# Avaliacao_indices_bolsa

./: README.md  pyproject.toml
avaliacao_indices/: __init__.py  concentration.py  data_loader.py  extremes.py  main.py  performance.py  teste.ipynb
avaliacao_indices/data/: cotacoes_BDRX.json  cotacoes_IBOV.json  cotacoes_IBRA.json  cotacoes_IBXL.json  cotacoes_IBXX.json  cotacoes_ICO2.json  cotacoes_ICON.json  cotacoes_IDIV.json  cotacoes_IEEX.json  cotacoes_IFIX.json  cotacoes_IFNC.json  cotacoes_IGCT.json  cotacoes_IGCX.json  cotacoes_IGNM.json  cotacoes_IMAT.json  cotacoes_IMOB.json  cotacoes_INDX.json  cotacoes_ISEE.json  cotacoes_ITAG.json  cotacoes_IVBX.json  cotacoes_MLCX.json  cotacoes_SMLL.json  cotacoes_UTIL.json  cotacoes_indices.json  grupos.json  investpy_index.json
avaliacao_indices/outputs/: BDRX_event_study.csv  BDRX_extremes.csv  BDRX_season_month.csv  BDRX_season_weekday.csv  IBOV_event_study.csv  IBOV_extremes.csv  IBOV_season_month.csv  IBOV_season_weekday.csv  IBRA_event_study.csv  IBRA_extremes.csv  IBRA_season_month.csv  IBRA_season_weekday.csv  IBXL_event_study.csv  IBXL_extremes.csv  IBXL_season_month.csv  IBXL_season_weekday.csv  IBXX_event_study.csv  IBXX_extremes.csv  IBXX_season_month.csv  IBXX_season_weekday.csv  ICO2_event_study.csv  ICO2_extremes.csv  ICO2_season_month.csv  ICO2_season_weekday.csv  ICON_event_study.csv  ICON_extremes.csv  ICON_season_month.csv  ICON_season_weekday.csv  IDIV_event_study.csv  IDIV_extremes.csv  IDIV_season_month.csv  IDIV_season_weekday.csv  IEEX_event_study.csv  IEEX_extremes.csv  (+60 more)
src/: fetch_indexes.py
(+557 files in other folders)
