[project]
name = "avaliacao-indices-bolsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "pandas>=2.2.2",
    "numpy>=2.1.2",
    "matplotlib>=3.9.2",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
]
